--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-component": "^1.1.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "prettier": "3.4.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
